# Floats

./: CMakeLists.txt  Delete.txt  sdfsadfasdf.txt
Basket/: 1.ft_array_comparison_with_main.c  1.ft_division_long_arithmetic_with_main copy.c  CMakeLists.txt  ft_difference_long_arithmetic.c  ft_division_long_arithmetic.c  ft_exponentiation_long_arithmetic.c
Basket/Floats copy/: 1.ft_make_zero_str_with_main.c  1.ft_shift_elements_with_main.c  floats.h  ft_abs.c  ft_array_comparison.c  ft_shift_elements.c
Basket/Floats copy 1/: 1.ft_make_number_with_main.c
Basket/Floats copy 1/untitled folder/: floats.h  ft_addition_long_arithmetic.c  ft_difference_long_arithmetic.c  ft_division_long_arithmetic.c  ft_exponentiation_long_arithmetic.c
Basket/Floats copy 1/untitled folder/libft/: ft_isalnum.c  ft_strdel.c  libft.h
Basket/Floats copy/untitled folder/libft/: ft_exponentiation_long_arithmetic.c
Basket/Floats/untitled folder/: 1.ft_make_number_with_main.c  a.out
Basket/My_test/: Makefile
Basket/My_test/libft/: ft_isdigit.c  ft_memccpy.c  ft_memcpy.c  ft_memset.c  ft_putendl.c  ft_strclr.c  ft_strjoin.c  ft_strndup.c  ft_strnequ.c  ft_strnstr.c  ft_strsplit.c  libft.h
Basket/My_test/src/: ft_allocation.c  ft_difference_long_arithmetic.c
Basket/My_test_1/: Makefile  ft_division_long_arithmetic_2.c  ft_o.c  ft_printf.c  ft_take_digit.c
Basket/My_test_1/libft/: ft_atoi.c  ft_isascii.c  ft_lstiter.c  ft_memalloc.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_shift_elements_right.c  ft_striteri.c  ft_strmapi.c  ft_strncpy.c
Basket/My_test_3/includes/: ft_printf.h
Basket/My_test_3/libft/: ft_bzero.c  ft_lstmap.c  ft_putchar_fd.c  ft_strcat.c  ft_strsub.c
Basket/My_test_3/src/: ft_f.c  ft_floats_2.c  ft_widht_d.c  main.c
Basket/My_test_5/: ft_floats.c  ft_floats_3.c  main.c
Basket/My_test_5/libft/: Makefile  ft_lib1.c  ft_null_s.c  ft_printf.h  ft_putendl_fd.c
Basket/My_test_super/: CMakeLists.txt  Makefile  ft_exp_long_arithmetic.c  ft_floats_4.c  ft_floats_5.c  ft_printf.h  ft_s.c  ft_x.c  main.c
Basket/New_Printf/: ft_floats.c  ft_printf.h
Basket/New_Printf/libft/: ft_putstr.c
Basket/New_Printf/pft-master/: history.csv
Basket/New_Printf_1/: CMakeLists.txt
Basket/New_Printf_1/libft/: ft_strnew.c
Basket/New_Printf_4/: CMakeLists.txt  main.c
Basket/New_Printf_4/libft/: ft_isalpha.c  ft_shift_elements_left.c
Basket/Printf/: CMakeLists.txt  Makefile  a.out  first_part.c  floats.h  ft_addition_long_arithmetic.c
Basket/Printf/libft/: ft_striter.c
Basket/Printf_1/: Makefile  floats.h  ft_addition_long_arithmetic.c  ft_difference_long_arithmetic.c  ft_division_long_arithmetic.c  ft_floats.c  ft_floats_3.c
Basket/Printf_1/libft/: ft_array_length.c  ft_strlen.c
Basket/Printf_4/: ft_exp_long_arithmetic.c  ft_floats_2.c
Basket/Printf_4/libft/: ft_strcmp.c
Basket/Printf_5/: ft_division_long_arithmetic_2.c  ft_floats_4.c  ft_make_zero_str.c
Basket/Printf_5/libft/: ft_abs.c  ft_isspace.c  ft_lstdel.c
Basket/Printf_for_make/libft/: Makefile  ft_lstmap.c  ft_memccpy.c  ft_putendl.c  ft_striteri.c
Basket/Printf_for_make/srcs/: ft_allocation.c  ft_division_long_arithmetic.c  ft_floats.c  ft_floats_2.c  ft_floats_4.c  ft_make_zero_str.c  ft_null.c  ft_x.c
Basket/ft_printf/: Makefile
Basket/ft_printf/libft/: Makefile  ft_abs.c  ft_atoi.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_putstr_fd.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_strlcat.c  ft_strlen.c  ft_strnequ.c  ft_tolower.c
Basket/ft_printf/srcs/: ft_division_long_arithmetic_2.c  ft_exp_long_arithmetic.c  ft_floats_3.c  ft_p.c  ft_take_digit.c  ft_u.c
Basket/untitled folder/: 1.ft_make_number_with_main.c  floats.h
Basket/untitled folder/libft/: ft_addition_long_arithmetic.c  ft_difference_long_arithmetic.c  ft_exponentiation_long_arithmetic.c  ft_memdel.c  ft_strncmp.c  libft.h
Basket/untitled folder_1/: 1.ft_make_number_with_main.c  Makefile  a.out
Basket/untitled folder_1/libft/: ft_addition_long_arithmetic.c  ft_difference_long_arithmetic.c  ft_exponentiation_long_arithmetic.c  ft_strchr.c
Basket/untitled folder_3/libft/: ft_memcmp.c  ft_strcpy.c  libft.h
Basket/untitled folder_6/: CMakeLists.txt
Basket/untitled folder_6/libft/: ft_isprint.c  ft_tolower.c
Floats/: CMakeLists.txt  (+5 more)
(+283 files in other folders)
